[gd_scene load_steps=2 format=3 uid="uid://p4stmt0wwkxr"]

[ext_resource type="Script" path="res://scenes/aoe_hazard.gd" id="1_swcth"]

[node name="AoeHazard" type="Area2D" groups=["aoe_hazard"]]
collision_layer = 64
collision_mask = 16
script = ExtResource("1_swcth")
damage = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
